--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <sonar.organization>eliza-05</sonar.organization>
         <sonar.projectKey>Eliza-05_Taller_MasterChef</sonar.projectKey>
         <sonar.projectName>Taller_MasterChef</sonar.projectName>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.coverage.exclusions>src/*/configurators/*</sonar.coverage.exclusions>
     </properties>
