--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,41 +1,50 @@
-name: CD - Deploy to Azure App Service
+name: CD - Deploy to Azure Web App (Container)
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
+    name: Build, Push Image, and Deploy
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+
+      - name: Log in to Azure Container Registry
+        uses: docker/login-action@v3
         with:
-          distribution: temurin
-          java-version: '17'
+          registry: ${{ secrets.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
 
-      - name: Build project
-        run: mvn -B -DskipTests clean package
+      - name: Build Docker image
+        run: |
+          IMAGE_NAME=${{ secrets.ACR_LOGIN_SERVER }}/masterchef-api
+          GIT_TAG=${GITHUB_SHA::7}
+          docker build -t $IMAGE_NAME:latest -t $IMAGE_NAME:$GIT_TAG .
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy to Azure Web App
+      - name: Push Docker image to ACR
+        run: |
+          IMAGE_NAME=${{ secrets.ACR_LOGIN_SERVER }}/masterchef-api
+          GIT_TAG=${GITHUB_SHA::7}
+          docker push $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:$GIT_TAG
+
+      - name: Deploy container to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
+
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          package: target/*-SNAPSHOT.jar
+
+
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+
+
+          images: ${{ secrets.ACR_LOGIN_SERVER }}/masterchef-api:latest
