--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,7 +33,7 @@ jobs:
           GIT_TAG=${GITHUB_SHA::7}
           echo "GIT_TAG = $GIT_TAG"
 
-          docker build -t $IMAGE_NAME:latest -t $IMAGE_NAME:$GIT_TAG .
+          docker build -t "$IMAGE_NAME:latest" -t "$IMAGE_NAME:$GIT_TAG" .
 
 
       - name: Push Docker image to ACR
