--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
                         </goals>
                         <configuration>
                             <excludes>
+                                <exclude>**/configs/**</exclude>
                                 <exclude>**/configurators/**</exclude>
                                 <exclude>**/model/entities/**</exclude>
                                 <exclude>**/model/persistence/**</exclude>
