--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI - Tests and Quality
 
 on:
   push:
-    branches: [ develop, main ]
+    branches: [ develop ]
   pull_request:
     branches: [ develop ]
 
@@ -53,11 +53,3 @@ jobs:
           path: target/site/jacoco/
           if-no-files-found: ignore
 
-      - name: SonarCloud Analysis
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
-          SONAR_TOKEN:  ${{ secrets.SONAR_TOKEN }}    
-        run: |
-          mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=Eliza-05_Taller_MasterChef \
-            -Dsonar.organization=eliza-05
